<resources>
    <string name="app_name">InternTasks2A</string>
    <string name="cityNameText">İstanbul</string>
    <string name="todayText">Bugün</string>
    <string name="temperatureText">26</string>
    <string name="degreeText">°</string>
    <string name="sunnyText">Güneşli</string>
    <string name="windText">Rüzgar</string>
    <string name="windSpeedText"> 3 km/s</string>
    <string name="todayDateText">01 Nisan 2023</string>
    <string name="nextDayGroupFirstDateText">Sal, 02 Nisan</string>
    <string name="nextDayGroupSecondDateText">Çar, 03 Nisan</string>
    <string name="nextDayGroupThirdDateText">Per, 04 Nisan</string>
    <string name="nextDayGroupFourthDateText">Cum, 05 Nisan</string>
    <string name="nextDayGroupTemperatureRangesText">14°-27°</string>
    <string name="updateDataText">Verileri Güncelle</string>
    <string name="fragmentButtonText">Open Fragments</string>
    <string name="activityButtonText">Go to Activities</string>
    <string name="navFragmentButtonText">Navigate with NavComponent</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>