<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    tools:context=".ui.main.MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/activityButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/update_data_button_background"
        android:text="@string/activityButtonText"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/fragmentButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragmentButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/update_data_button_background"
        android:text="@string/fragmentButtonText"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/activityButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navFragmentButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/navFragmentButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/update_data_button_background"
        android:text="@string/navFragmentButtonText"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentButton" />

</androidx.constraintlayout.widget.ConstraintLayout>