<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    tools:context=".ui.case2.DetailFragment">

    <ImageView
        android:id="@+id/fragmentReflesh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mediumVerticalSpacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/refresh" />

    <TextView
        android:id="@+id/fragmentCityText"
        style="@style/largeMediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mediumVerticalSpacing"
        android:text="@string/cityNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentReflesh" />

    <TextView
        android:id="@+id/FragmentTodayText"
        style="@style/smallRegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todayText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentCityText" />

    <ImageView
        android:id="@+id/fragmentWeatherImage"
        android:layout_width="@dimen/largeImageSize"
        android:layout_height="@dimen/largeImageSize"
        android:layout_marginBottom="@dimen/hugeVerticalSpacing"
        android:src="@drawable/ic_sunny"
        app:layout_constraintBottom_toTopOf="@+id/fragmentTemperatureText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fragmentTemperatureText"
        style="@style/HugeMediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mediumVerticalSpacing"
        android:text="@string/temperatureText"
        app:layout_constraintBottom_toTopOf="@+id/fragmentWeatherNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fragmentDegreeMarkText"
        style="@style/HugeMediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degreeText"
        app:layout_constraintStart_toEndOf="@+id/fragmentTemperatureText"
        app:layout_constraintTop_toTopOf="@+id/fragmentTemperatureText" />

    <TextView
        android:id="@+id/fragmentWeatherNameText"
        style="@style/mediumMediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunnyText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragmentReflesh" />

    <TextView
        android:id="@+id/fragmentWindText"
        style="@style/smallMediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/hugeVerticalSpacing"
        android:text="@string/windText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentWeatherNameText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tinyVerticalSpacing"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/fragmentWindText"
        app:layout_constraintStart_toStartOf="@+id/fragmentWindText"
        app:layout_constraintTop_toBottomOf="@+id/fragmentWindText">

        <ImageView
            android:id="@+id/fragmentIcWind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_wind"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragmentWindSpeedText"
            style="@style/smallRegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/smallHorizontalSpacing"
            android:text="@string/windSpeedText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/fragmentIcWind"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/hugeVerticalSpacing"
        app:layout_constraintBottom_toTopOf="@+id/fragmentUpdateDataButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/fragmentFirstDateText"
            style="@style/smallRegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/largeHorizontalSpacing"
            android:layout_marginTop="@dimen/smallVerticalSpacing"
            android:text="@string/nextDayGroupFirstDateText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/fragmentIcSunny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/fragmentIcCloudy"
            app:layout_constraintEnd_toStartOf="@+id/fragmentTemperatureRangesText"
            app:layout_constraintStart_toEndOf="@+id/fragmentFirstDateText"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_sunny" />

        <TextView
            android:id="@+id/fragmentTemperatureRangesText"
            style="@style/smallMediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallVerticalSpacing"
            android:layout_marginEnd="@dimen/largeHorizontalSpacing"
            android:text="@string/nextDayGroupTemperatureRangesText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragmentSecondDateText"
            style="@style/smallRegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/largeHorizontalSpacing"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupSecondDateText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentFirstDateText" />

        <ImageView
            android:id="@+id/fragmentIcCloudy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/fragmentIcSunny1"
            app:layout_constraintEnd_toStartOf="@+id/fragmentTemperatureRangesText2"
            app:layout_constraintStart_toEndOf="@+id/fragmentSecondDateText"
            app:layout_constraintTop_toBottomOf="@+id/fragmentIcSunny"
            app:srcCompat="@drawable/ic_cloudy" />

        <TextView
            android:id="@+id/fragmentTemperatureRangesText2"
            style="@style/smallMediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:layout_marginEnd="@dimen/largeHorizontalSpacing"
            android:text="@string/nextDayGroupTemperatureRangesText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentTemperatureRangesText" />

        <TextView
            android:id="@+id/fragmentThirdDateText"
            style="@style/smallRegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/largeHorizontalSpacing"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupThirdDateText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentSecondDateText" />

        <ImageView
            android:id="@+id/fragmentIcSunny1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/fragmentIcRainy"
            app:layout_constraintEnd_toStartOf="@+id/fragmentTemperatureRangesText3"
            app:layout_constraintStart_toEndOf="@+id/fragmentThirdDateText"
            app:layout_constraintTop_toBottomOf="@+id/fragmentIcCloudy"
            app:srcCompat="@drawable/ic_sunny" />

        <TextView
            android:id="@+id/fragmentTemperatureRangesText3"
            style="@style/smallMediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:layout_marginEnd="@dimen/largeHorizontalSpacing"
            android:text="@string/nextDayGroupTemperatureRangesText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentTemperatureRangesText2" />

        <TextView
            android:id="@+id/fragmentFourthDateText"
            style="@style/smallRegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/largeHorizontalSpacing"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupFourthDateText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentThirdDateText" />

        <ImageView
            android:id="@+id/fragmentIcRainy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/fragmentIcSunny1"
            app:layout_constraintStart_toStartOf="@+id/fragmentIcSunny1"
            app:srcCompat="@drawable/ic_rainy" />

        <TextView
            android:id="@+id/fragmentTemperatureRangesText4"
            style="@style/smallMediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:layout_marginEnd="@dimen/largeHorizontalSpacing"
            android:text="@string/nextDayGroupTemperatureRangesText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentTemperatureRangesText3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragmentUpdateDataButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mediumHorizontalSpacing"
        android:layout_marginEnd="@dimen/mediumHorizontalSpacing"
        android:layout_marginBottom="@dimen/largeVerticalSpacing"
        android:background="@drawable/update_data_button_background"
        android:text="@string/updateDataText"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>